<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_expo"
            android:icon="@drawable/ic_expo"
            android:title="@string/menu_expo" />
    </group>

    <item android:title="@string/artwork_studio_caps">
        <menu>
            <item
                android:title="" />
        </menu>
    </item>

</menu>