<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.detail.DetailArtActivity"
    tools:showIn="@layout/activity_detail_art">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:id="@+id/first_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_display"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_category"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/image_ic_category"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_category"/>

                <TextView
                    android:id="@+id/text_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginEnd="32dp"
                    android:lines="1"
                    android:textStyle="bold"
                    tools:text="Painting &amp; Drawing"
                    android:textColor="@color/silver_gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginVertical="4dp"
                    android:textSize="11sp"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/silver_gray"
                    android:text="@string/display_at_label"/>

                <TextView
                    android:id="@+id/display_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginVertical="4dp"
                    android:layout_marginEnd="32dp"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textColor="@color/silver_gray"
                    tools:text="@string/display_at_content"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_description"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardView.Dark"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/first_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ic_desc"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/ic_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_toEndOf="@id/ic_desc"
                    android:text="@string/desc_label"
                    android:textColor="@color/tosca"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ic_desc"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="35dp"
                    android:layout_toEndOf="@id/ic_desc"
                    android:justificationMode="inter_word"
                    android:textColor="@color/silver_gray"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    tools:text="@string/lorem_desc" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/view_spacing"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/tosca"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="7dp"
            app:layout_constraintTop_toBottomOf="@id/card_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/dimension_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/tosca"
            android:textStyle="italic"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/view_spacing"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/dimensions_label"/>

        <TextView
            android:id="@+id/dimensions_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/silver_gray"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@id/dimension_label"
            app:layout_constraintTop_toTopOf="@id/dimension_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="61.1 × 50.2 cm (24 1/16 × 19 3/4 in.)"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/dimensions_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>